# raytracing

./: .clang-format  CMakeLists.txt  README.md
assets/: 10.5-scene-with-metal-spheres.ppm  10.6-fuzzed-metal.ppm  11.2-refraction-simple.ppm  11.3-total-reflection-air-bubble.ppm  12.1-adjustable-vfov.ppm  12.2-repos-cam-zoom-in-roll.ppm  5.1-red-sphere.ppm  6.1-norm-colored-sphere.ppm  8-antialiased-norm-colored.ppm  9.1-diffuse.ppm  9.3-with-shadow-acne-fixed.ppm  9.4-lambertian-reflection.ppm  9.5a-gamut-before-gamma-correction.ppm  9.5b-gamut-after-gamma-correction.ppm
include/: RTweekend.hpp  camera.hpp  color.hpp  hittable.hpp  hittableList.hpp  interval.hpp  material.hpp  ray.hpp  sphere.hpp  v3.hpp
src/: helloworld_ppm.cpp  main.cpp
tests/: v3_test.cpp
